Omgjør stillingstitteltypeahead til å ta i mot et set