@@ -56,26 +56,26 @@ public class EsCvObjectMother {
         utdanningsListe.add(utdanning1);
         EsYrkeserfaring yrkeserfaring1 = new EsYrkeserfaring(fraIsoDato("2000-01-01"), fraIsoDato("2000-01-10"),
                 "Stentransport, Kragerø", "8341.01", "Anleggsmaskindrifter",
-                "Anleggsmaskindrifter", "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Anleggsmaskindrifter", "Anleggsmaskinoperatør"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring2 = new EsYrkeserfaring(fraIsoDato("2003-01-01"), fraIsoDato("2013-02-01"),
                 "AF-Pihl, Hammerfest", "8342.01", "Anleggsmaskinfører",
-                "Anleggsmaskindrifter", "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Collections.singleton("Anleggsmaskindrifter"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring3 = new EsYrkeserfaring(fraIsoDato("2003-04-01"), fraIsoDato("2003-05-01"),
                 "O.K. Hagalia, Slependen", "8342.01", "Anleggsmaskinfører",
-                "Anleggsmaskindrifter", "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Anleggsmaskindrifter"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring4 = new EsYrkeserfaring(fraIsoDato("2005-08-01"), fraIsoDato("2005-09-01"),
-                "Vard Group,avd.Brevik", "7233.03", "Industrimekaniker", "Industrimekaniker", "Industrimekaniker",
+                "Vard Group,avd.Brevik", "7233.03", "Industrimekaniker", Set.of("Industrimekaniker"), "Industrimekaniker",
                 "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring5 = new EsYrkeserfaring(fraIsoDato("2016-06-01"), fraIsoDato("2016-07-01"),
-                "MTM anlegg", "8332.03", "Lastebil- og trailersjåfør", "Lastebil- og trailersjåfør", "Sjåfør kl. 2", "YRKE_ORGNR",
+                "MTM anlegg", "8332.03", "Lastebil- og trailersjåfør", Set.of("Lastebil- og trailersjåfør"), "Sjåfør kl. 2", "YRKE_ORGNR",
                 "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring6 = new EsYrkeserfaring(fraIsoDato("2017-10-01"), fraIsoDato("2017-12-01"),
-                "NLI  Grenland", "7233.03", "Industrimekaniker", "Industrimekaniker", "Industrimekaniker", "YRKE_ORGNR",
+                "NLI  Grenland", "7233.03", "Industrimekaniker", Set.of("Industrimekaniker"), "Industrimekaniker", "YRKE_ORGNR",
                 "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         ArrayList<EsYrkeserfaring> yrkeserfaringsListe = new ArrayList<>();
@@ -256,28 +256,28 @@ public class EsCvObjectMother {
         ArrayList<EsUtdanning> utdanningListe = new ArrayList<>();
         utdanningListe.add(EsUtdanning);
         EsYrkeserfaring yrkeserfaring1 = new EsYrkeserfaring(fraIsoDato("2000-01-01"), fraIsoDato("2002-01-01"),
-                "Kodesentralen Vardø", "5746.07", "Programvareutvikler", "Programvareutvikler", "Fullstackutvikler",
+                "Kodesentralen Vardø", "5746.07", "Programvareutvikler", Collections.singleton("Programvareutvikler"), "Fullstackutvikler",
                 "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring2 = new EsYrkeserfaring(fraIsoDato("2003-01-01"), fraIsoDato("2003-07-01"),
                 "Programvarefabrikken Førde", "5746.07", "Systemutvikler",
-                "Systemutvikler", "Utvikling av nytt kandidatsøk", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Systemutvikler", "Java-utvikler"), "Utvikling av nytt kandidatsøk", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring3 = new EsYrkeserfaring(fraIsoDato("2003-04-01"), fraIsoDato("2003-05-01"),
                 "Tjenestetest Norge", "6859.02", "Systemtester",
-                "Systemtester", "Automatiske tester av nytt kandidatsøk", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Systemtester"), "Automatiske tester av nytt kandidatsøk", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring4 = new EsYrkeserfaring(fraIsoDato("2005-08-01"), fraIsoDato("2006-07-01"),
-                "lagerarbeiderne L. H.", "8659.03", "Lagermedarbeider", "Lagermedarbeider", "Lagermedarbeider",
+                "lagerarbeiderne L. H.", "8659.03", "Lagermedarbeider", Set.of("Lagermedarbeider"), "Lagermedarbeider",
                 "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring5 = new EsYrkeserfaring(fraIsoDato("2016-06-01"), fraIsoDato("2017-04-01"),
-                "lagerarbeiderne L. H.", "8659.03", "Truckfører lager", "Truckfører lager", "Stortruck", "YRKE_ORGNR",
+                "lagerarbeiderne L. H.", "8659.03", "Truckfører lager", Set.of("Truckfører lager"), "Stortruck", "YRKE_ORGNR",
                 "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring6 =
                 new EsYrkeserfaring(fraIsoDato("2017-10-01"), fraIsoDato("2019-09-26"), "Awesome coders AS", "5746.07",
-                        "Javautvikler", "Javautvikler", "Javautvikler", "YRKE_ORGNR", "YRKE_NACEKODE", false, Arrays.asList("Javaprogrammerer", "Javawizard", "Javaguru"), "Oslo");
+                        "Javautvikler", Set.of("Javautvikler"), "Javautvikler", "YRKE_ORGNR", "YRKE_NACEKODE", false, Arrays.asList("Javaprogrammerer", "Javawizard", "Javaguru"), "Oslo");
 
         ArrayList<EsYrkeserfaring> yrkeserfaringListe = new ArrayList<>();
         yrkeserfaringListe.add(yrkeserfaring1);
@@ -443,27 +443,27 @@ public class EsCvObjectMother {
         ArrayList<EsUtdanning> utdanningListe = new ArrayList<>();
         utdanningListe.add(EsUtdanning);
         EsYrkeserfaring yrkeserfaring1 = new EsYrkeserfaring(fraIsoDato("2000-01-01"), fraIsoDato("2000-02-01"),
-                "Butikken i nærheten", "1010.01", "Butikkmedarbeider", "Butikkmedarbeider", "Butikkmedarbeider i Førde",
+                "Butikken i nærheten", "1010.01", "Butikkmedarbeider", Set.of("Butikkmedarbeider"), "Butikkmedarbeider i Førde",
                 "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring2 = new EsYrkeserfaring(fraIsoDato("2003-01-01"), fraIsoDato("2003-02-01"),
                 "Butikken i nærheten", "1010.01", "Butikkmedarbeider(dagligvarer)",
-                "Butikkmedarbeider(dagligvarer)", "Butikkmedarbeider(dagligvarer)", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Butikkmedarbeider(dagligvarer)", "Butikkmedarbeider"), "Butikkmedarbeider(dagligvarer)", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring3 = new EsYrkeserfaring(fraIsoDato("2003-04-01"), fraIsoDato("2003-05-01"),
                 "Butikken langt unna", "1010.01", "Butikkmedarbeider(trevare)",
-                "Butikkmedarbeider(trevare)", "Butikkmedarbeider(trevare)", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Butikkmedarbeider(trevare)"), "Butikkmedarbeider(trevare)", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring4 = new EsYrkeserfaring(fraIsoDato("2005-08-01"), fraIsoDato("2005-09-01"),
                 "Butikken", "4561.03", "Butikkmedarbeider(elektronikk)",
-                "Butikkmedarbeider(elektronikk)", "Butikkmedarbeider(elektronikk)", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Butikkmedarbeider(elektronikk)"), "Butikkmedarbeider(elektronikk)", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring5 =
                 new EsYrkeserfaring(fraIsoDato("2016-06-01"), fraIsoDato("2016-07-01"), "Tvkanalen TV?", "5684.05",
-                        "Presentør", "Presentør", "Presentør", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                        "Presentør", Set.of("Presentør"), "Presentør", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring6 = new EsYrkeserfaring(fraIsoDato("2017-10-01"), null, "NLI  Grenland",
-                "5684.05", "Nyhetsanker", "Nyhetsanker", "Nyhetsanker", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "5684.05", "Nyhetsanker", Set.of("Nyhetsanker"), "Nyhetsanker", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         ArrayList<EsYrkeserfaring> yrkeserfaringListe = new ArrayList<>();
         yrkeserfaringListe.add(yrkeserfaring1);
@@ -642,28 +642,28 @@ public class EsCvObjectMother {
         ArrayList<EsUtdanning> utdanningListe = new ArrayList<>();
         utdanningListe.add(EsUtdanning);
         EsYrkeserfaring yrkeserfaring1 = new EsYrkeserfaring(fraIsoDato("2000-01-01"), fraIsoDato("2002-01-01"),
-                "Jokah", "1010.01", "Butikkmedarbeider", "Butikkmedarbeider", "Butikkmedarbeider", "YRKE_ORGNR",
+                "Jokah", "1010.01", "Butikkmedarbeider", Set.of("Butikkmedarbeider"), "Butikkmedarbeider", "YRKE_ORGNR",
                 "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring2 = new EsYrkeserfaring(fraIsoDato("2003-01-01"), fraIsoDato("2003-04-01"),
                 "Nærbutikkern", "1010.01", "Butikkmedarbeider(klesbutikk)",
-                "Butikkmedarbeider(klesbutikk)", "Butikkmedarbeider(klebutikk)", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Butikkmedarbeider(klesbutikk)"), "Butikkmedarbeider(klebutikk)", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring3 =
                 new EsYrkeserfaring(fraIsoDato("2003-04-01"), fraIsoDato("2003-07-01"), "Tv tv tv", "5684.05",
-                        "Nyhetspresentør", "Nyhetspresentør", "Nyhetspresentør", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                        "Nyhetspresentør", Set.of("Nyhetspresentør"), "Nyhetspresentør", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring4 =
                 new EsYrkeserfaring(fraIsoDato("2005-08-01"), fraIsoDato("2016-07-01"), "Vard Group,avd.Brevik",
-                        "5684.05", "Hallovert", "Hallovert", "Hallovert", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                        "5684.05", "Hallovert", Set.of("Hallovert"), "Hallovert", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring5 =
                 new EsYrkeserfaring(fraIsoDato("2016-06-01"), fraIsoDato("2017-04-01"), "DN teater", "5124.46",
-                        "Skuespiller", "Skuespiller", "Skuespiller", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                        "Skuespiller", Set.of("Skuespiller"), "Skuespiller", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring6 = new EsYrkeserfaring(fraIsoDato("2017-10-01"), null,
                 "Dukketeateret Rena", "5124.46", "Skuespiller(dukketeater)",
-                "Skuespiller(dukketeater)", "Skuespiller(dukketeater)", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Skuespiller(dukketeater)"), "Skuespiller(dukketeater)", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         ArrayList<EsYrkeserfaring> yrkeserfaringListe = new ArrayList<>();
         yrkeserfaringListe.add(yrkeserfaring1);
@@ -833,26 +833,26 @@ public class EsCvObjectMother {
 
 
         EsYrkeserfaring yrkeserfaring1 = new EsYrkeserfaring(fraIsoDato("2000-01-01"), fraIsoDato("2000-02-01"),
-                "Bankhvelvet BBL", "4865.75", "Bankhvelvoperatør", "Bankhvelvoperatør", "Bankhvelvoperatør",
+                "Bankhvelvet BBL", "4865.75", "Bankhvelvoperatør", Collections.singleton("Bankhvelvoperatør"), "Bankhvelvoperatør",
                 "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring2 =
                 new EsYrkeserfaring(fraIsoDato("2003-01-01"), fraIsoDato("2003-02-01"), "Proggehula", "5746.07",
-                        "Progger", "Progger", "Progger", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                        "Progger", Set.of("Progger"), "Progger", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring3 = new EsYrkeserfaring(fraIsoDato("2003-04-01"), fraIsoDato("2003-05-01"),
-                "Test a.a.s", "6859.02", "Tester", "Tester", "Tester", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "Test a.a.s", "6859.02", "Tester", Set.of("Tester"), "Tester", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring4 =
                 new EsYrkeserfaring(fraIsoDato("2005-08-01"), fraIsoDato("2005-09-01"), "K.O. kranservice", "8342.01",
-                        "Kranoperatør", "Kranoperatør", "Kranoperatør", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.singletonList("Operatør av kran"), "Oslo");
+                        "Kranoperatør", Set.of("Kranoperatør"), "Kranoperatør", "YRKE_ORGNR", "YRKE_NACEKODE", false, List.of("Operatør av kran"), "Oslo");
 
         EsYrkeserfaring yrkeserfaring5 = new EsYrkeserfaring(fraIsoDato("2016-06-01"), fraIsoDato("2016-06-02"),
-                "Lang transport A.S.", "8332.03", "Lastebil- \"Lastebil- og trailersjåførog trailersjåfør", "Lastebil- \"Lastebil- og trailersjåførog trailersjåfør", "Sjåfør kl. 3",
+                "Lang transport A.S.", "8332.03", "Lastebil- \"Lastebil- og trailersjåførog trailersjåfør", Set.of("Lastebil- \"Lastebil- og trailersjåførog trailersjåfør"), "Sjåfør kl. 3",
                 "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring6 = new EsYrkeserfaring(fraIsoDato("2017-10-01"), fraIsoDato(null),
-                "Mekken mekk", "7233.03", "Industrimekaniker", "Industrimekaniker", "Industrimekaniker", "YRKE_ORGNR",
+                "Mekken mekk", "7233.03", "Industrimekaniker", Set.of("Industrimekaniker"), "Industrimekaniker", "YRKE_ORGNR",
                 "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         ArrayList<EsYrkeserfaring> yrkeserfaringListe = new ArrayList<>();
@@ -1028,26 +1028,26 @@ public class EsCvObjectMother {
 
 
         EsYrkeserfaring yrkeserfaring1 = new EsYrkeserfaring(fraIsoDato("2000-01-01"), fraIsoDato("2000-02-01"),
-                "Bankhvelvet BBL", "4865.75", "Bankhvelvoperatør", "Bankhvelvoperatør", "Bankhvelvoperatør",
+                "Bankhvelvet BBL", "4865.75", "Bankhvelvoperatør", Collections.singleton("Bankhvelvoperatør"), "Bankhvelvoperatør",
                 "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring2 =
                 new EsYrkeserfaring(fraIsoDato("2003-01-01"), fraIsoDato("2003-02-01"), "Proggehula", "5746.07",
-                        "Progger", "Progger", "Progger", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                        "Progger", Collections.singleton("Progger"), "Progger", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring3 = new EsYrkeserfaring(fraIsoDato("2003-04-01"), fraIsoDato("2003-05-01"),
-                "Test a.a.s", "6859.02", "Tester", "Tester", "Tester", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                "Test a.a.s", "6859.02", "Tester", Collections.singleton("Tester"), "Tester", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring4 =
                 new EsYrkeserfaring(fraIsoDato("2005-08-01"), fraIsoDato("2005-09-01"), "K.O. kranservice", "8342.01",
-                        "Kranoperatør", "Kranoperatør", "Kranoperatør", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                        "Kranoperatør", Collections.singleton("Kranoperatør"), "Kranoperatør", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring5 = new EsYrkeserfaring(fraIsoDato("2016-06-01"), fraIsoDato("2016-06-02"),
-                "Lang transport A.S.", "8332.03", "Lastebil- og trailersjåfør", "Lastebil- og trailersjåfør", "Sjåfør kl. 3",
+                "Lang transport A.S.", "8332.03", "Lastebil- og trailersjåfør", Collections.singleton("Lastebil- og trailersjåfør"), "Sjåfør kl. 3",
                 "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring6 = new EsYrkeserfaring(fraIsoDato("2017-10-01"), fraIsoDato("2017-11-01"),
-                "Mekken mekk", "7233.03", "Industrimekaniker", "Industrimekaniker", "Industrimekaniker", "YRKE_ORGNR",
+                "Mekken mekk", "7233.03", "Industrimekaniker", Collections.singleton("Industrimekaniker"), "Industrimekaniker", "YRKE_ORGNR",
                 "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         ArrayList<EsYrkeserfaring> yrkeserfaringListe = new ArrayList<>();
@@ -1199,27 +1199,27 @@ public class EsCvObjectMother {
         utdanningsListe.add(utdanning);
         utdanningsListe.add(utdanning2);
         EsYrkeserfaring yrkeserfaring1 = new EsYrkeserfaring(fraIsoDato("2000-01-01"), fraIsoDato("2000-01-10"),
-                "Stentransport, Kragerø", "8341.01", "", "", "maskinkjører og maskintransport",
+                "Stentransport, Kragerø", "8341.01", "", Set.of(), "maskinkjører og maskintransport",
                 "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring2 = new EsYrkeserfaring(fraIsoDato("2003-01-01"), fraIsoDato("2003-02-01"),
                 "AF-Pihl, Hammerfest", "8342.01", "Anleggsmaskinfører",
-                "Anleggsmaskinfører", "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Collections.singleton("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring3 = new EsYrkeserfaring(fraIsoDato("2003-04-01"), fraIsoDato("2003-05-01"),
                 "O.K. Hagalia, Slependen", "8342.01", "Anleggsmaskinfører",
-                "Anleggsmaskinfører", "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Collections.singleton("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring4 = new EsYrkeserfaring(fraIsoDato("2005-08-01"), fraIsoDato("2005-09-01"),
-                "Vard Group,avd.Brevik", "7233.03", "Industrimekaniker", "Industrimekaniker", "Industrimekaniker",
+                "Vard Group,avd.Brevik", "7233.03", "Industrimekaniker", Collections.singleton("Industrimekaniker"), "Industrimekaniker",
                 "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring5 = new EsYrkeserfaring(fraIsoDato("2016-06-01"), fraIsoDato("2016-07-01"),
-                "MTM anlegg", "8332.03", "Lastebil- og trailersjåfør", "Lastebil- og trailersjåfør", "Sjåfør kl. 2", "YRKE_ORGNR",
+                "MTM anlegg", "8332.03", "Lastebil- og trailersjåfør", Collections.singleton("Lastebil- og trailersjåfør"), "Sjåfør kl. 2", "YRKE_ORGNR",
                 "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring6 = new EsYrkeserfaring(fraIsoDato("2017-10-01"), fraIsoDato("2017-12-01"),
-                "NLI  Grenland", "7233.03", "Industrimekaniker", "Industrimekaniker", "Industrimekaniker", "YRKE_ORGNR",
+                "NLI  Grenland", "7233.03", "Industrimekaniker", Collections.singleton("Industrimekaniker"), "Industrimekaniker", "YRKE_ORGNR",
                 "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         ArrayList<EsYrkeserfaring> yrkeserfaringsListe = new ArrayList<>();
@@ -1383,27 +1383,27 @@ public class EsCvObjectMother {
         utdanningsListe.add(utdanning2);
 
         EsYrkeserfaring yrkeserfaring1 = new EsYrkeserfaring(fraIsoDato("2000-01-01"), fraIsoDato("2000-01-10"),
-                "Stentransport, Kragerø", "8341.01", "", "", "maskinkjører og maskintransport",
+                "Stentransport, Kragerø", "8341.01", "", Set.of(), "maskinkjører og maskintransport",
                 "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring2 = new EsYrkeserfaring(fraIsoDato("2003-01-01"), fraIsoDato("2003-02-01"),
                 "AF-Pihl, Hammerfest", "8342.01", "Anleggsmaskinfører",
-                "Anleggsmaskinfører", "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Collections.singleton("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring3 = new EsYrkeserfaring(fraIsoDato("2003-04-01"), fraIsoDato("2003-05-01"),
                 "O.K. Hagalia, Slependen", "8342.01", "Anleggsmaskinfører",
-                "Anleggsmaskinfører", "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Collections.singleton("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring4 = new EsYrkeserfaring(fraIsoDato("2005-08-01"), fraIsoDato("2005-09-01"),
-                "Vard Group,avd.Brevik", "7233.03", "Industrimekaniker", "Industrimekaniker", "Industrimekaniker",
+                "Vard Group,avd.Brevik", "7233.03", "Industrimekaniker", Collections.singleton("Industrimekaniker"), "Industrimekaniker",
                 "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring5 = new EsYrkeserfaring(fraIsoDato("2016-06-01"), fraIsoDato("2016-07-01"),
-                "MTM anlegg", "8332.03", "Lastebil- og trailersjåfør", "Lastebil- og trailersjåfør", "Sjåfør kl. 2", "YRKE_ORGNR",
+                "MTM anlegg", "8332.03", "Lastebil- og trailersjåfør", Collections.singleton("Lastebil- og trailersjåfør"), "Sjåfør kl. 2", "YRKE_ORGNR",
                 "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring6 = new EsYrkeserfaring(fraIsoDato("2017-10-01"), fraIsoDato("2017-12-01"),
-                "NLI  Grenland", "7233.03", "Industrimekaniker", "Industrimekaniker", "Industrimekaniker", "YRKE_ORGNR",
+                "NLI  Grenland", "7233.03", "Industrimekaniker", Collections.singleton("Industrimekaniker"), "Industrimekaniker", "YRKE_ORGNR",
                 "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         ArrayList<EsYrkeserfaring> yrkeserfaringsListe = new ArrayList<>();
@@ -1572,27 +1572,27 @@ public class EsCvObjectMother {
         utdanningsListe.add(utdanning2);
 
         EsYrkeserfaring yrkeserfaring1 = new EsYrkeserfaring(fraIsoDato("2000-01-01"), fraIsoDato("2000-01-10"),
-                "Stentransport, Kragerø", "8341.01", "", "", "maskinkjører og maskintransport",
+                "Stentransport, Kragerø", "8341.01", "", Set.of(), "maskinkjører og maskintransport",
                 "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring2 = new EsYrkeserfaring(fraIsoDato("2003-01-01"), fraIsoDato("2003-02-01"),
                 "AF-Pihl, Hammerfest", "8342.01", "Anleggsmaskinfører",
-                "Anleggsmaskinfører", "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Collections.singleton("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring3 = new EsYrkeserfaring(fraIsoDato("2003-04-01"), fraIsoDato("2003-05-01"),
                 "O.K. Hagalia, Slependen", "8342.01", "Anleggsmaskinfører",
-                "Anleggsmaskinfører", "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Collections.singleton("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring4 = new EsYrkeserfaring(fraIsoDato("2005-08-01"), fraIsoDato("2005-09-01"),
-                "Vard Group,avd.Brevik", "7233.03", "Industrimekaniker", "Industrimekaniker", "Industrimekaniker",
+                "Vard Group,avd.Brevik", "7233.03", "Industrimekaniker", Collections.singleton("Industrimekaniker"), "Industrimekaniker",
                 "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring5 = new EsYrkeserfaring(fraIsoDato("2016-06-01"), fraIsoDato("2016-07-01"),
-                "MTM anlegg", "8332.03", "Lastebil- og trailersjåfør", "Lastebil- og trailersjåfør", "Sjåfør kl. 2", "YRKE_ORGNR",
+                "MTM anlegg", "8332.03", "Lastebil- og trailersjåfør", Collections.singleton("Lastebil- og trailersjåfør"), "Sjåfør kl. 2", "YRKE_ORGNR",
                 "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring6 = new EsYrkeserfaring(fraIsoDato("2017-10-01"), fraIsoDato("2017-12-01"),
-                "NLI  Grenland", "7233.03", "Industrimekaniker", "Industrimekaniker", "Industrimekaniker", "YRKE_ORGNR",
+                "NLI  Grenland", "7233.03", "Industrimekaniker", Collections.singleton("Industrimekaniker"), "Industrimekaniker", "YRKE_ORGNR",
                 "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         ArrayList<EsYrkeserfaring> yrkeserfaringsListe = new ArrayList<>();
@@ -1762,27 +1762,27 @@ public class EsCvObjectMother {
         utdanningsListe.add(utdanning2);
 
         EsYrkeserfaring yrkeserfaring1 = new EsYrkeserfaring(fraIsoDato("2000-01-01"), fraIsoDato("2000-01-10"),
-                "Stentransport, Kragerø", "8341.01", "", "", "maskinkjører og maskintransport",
+                "Stentransport, Kragerø", "8341.01", "", Set.of(), "maskinkjører og maskintransport",
                 "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring2 = new EsYrkeserfaring(fraIsoDato("2003-01-01"), fraIsoDato("2003-02-01"),
                 "AF-Pihl, Hammerfest", "8342.01", "Anleggsmaskinfører",
-                "Anleggsmaskinfører", "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Collections.singleton("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring3 = new EsYrkeserfaring(fraIsoDato("2003-04-01"), fraIsoDato("2003-05-01"),
                 "O.K. Hagalia, Slependen", "8342.01", "Anleggsmaskinfører",
-                "Anleggsmaskinfører", "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Collections.singleton("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring4 = new EsYrkeserfaring(fraIsoDato("2005-08-01"), fraIsoDato("2005-09-01"),
-                "Vard Group,avd.Brevik", "7233.03", "Industrimekaniker", "Industrimekaniker", "Industrimekaniker",
+                "Vard Group,avd.Brevik", "7233.03", "Industrimekaniker", Collections.singleton("Industrimekaniker"), "Industrimekaniker",
                 "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring5 = new EsYrkeserfaring(fraIsoDato("2016-06-01"), fraIsoDato("2016-07-01"),
-                "MTM anlegg", "8332.03", "Lastebil- og trailersjåfør", "Lastebil- og trailersjåfør", "Sjåfør kl. 2", "YRKE_ORGNR",
+                "MTM anlegg", "8332.03", "Lastebil- og trailersjåfør", Collections.singleton("Lastebil- og trailersjåfør"), "Sjåfør kl. 2", "YRKE_ORGNR",
                 "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring6 = new EsYrkeserfaring(fraIsoDato("2017-10-01"), fraIsoDato("2017-12-01"),
-                "NLI  Grenland", "7233.03", "Industrimekaniker", "Industrimekaniker", "Industrimekaniker", "YRKE_ORGNR",
+                "NLI  Grenland", "7233.03", "Industrimekaniker", Collections.singleton("Industrimekaniker"), "Industrimekaniker", "YRKE_ORGNR",
                 "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         ArrayList<EsYrkeserfaring> yrkeserfaringsListe = new ArrayList<>();
@@ -1951,27 +1951,27 @@ public class EsCvObjectMother {
         utdanningsListe.add(utdanning2);
 
         EsYrkeserfaring yrkeserfaring1 = new EsYrkeserfaring(fraIsoDato("2000-01-01"), fraIsoDato("2000-01-10"),
-                "Stentransport, Kragerø", "8341.01", "", "", "maskinkjører og maskintransport",
+                "Stentransport, Kragerø", "8341.01", "", Set.of(), "maskinkjører og maskintransport",
                 "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring2 = new EsYrkeserfaring(fraIsoDato("2003-01-01"), fraIsoDato("2003-02-01"),
                 "AF-Pihl, Hammerfest", "8342.01", "Anleggsmaskinfører",
-                "Anleggsmaskinfører", "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Collections.singleton("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring3 = new EsYrkeserfaring(fraIsoDato("2003-04-01"), fraIsoDato("2003-05-01"),
                 "O.K. Hagalia, Slependen", "8342.01", "Anleggsmaskinfører",
-                "Anleggsmaskinfører", "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Collections.singleton("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring4 = new EsYrkeserfaring(fraIsoDato("2005-08-01"), fraIsoDato("2005-09-01"),
-                "Vard Group,avd.Brevik", "7233.03", "Industrimekaniker", "Industrimekaniker", "Industrimekaniker",
+                "Vard Group,avd.Brevik", "7233.03", "Industrimekaniker", Collections.singleton("Industrimekaniker"), "Industrimekaniker",
                 "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring5 = new EsYrkeserfaring(fraIsoDato("2016-06-01"), fraIsoDato("2016-07-01"),
-                "MTM anlegg", "8332.03", "Lastebil- og trailersjåfør", "Lastebil- og trailersjåfør", "Sjåfør kl. 2", "YRKE_ORGNR",
+                "MTM anlegg", "8332.03", "Lastebil- og trailersjåfør", Collections.singleton("Lastebil- og trailersjåfør"), "Sjåfør kl. 2", "YRKE_ORGNR",
                 "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring6 = new EsYrkeserfaring(fraIsoDato("2017-10-01"), fraIsoDato("2017-12-01"),
-                "NLI  Grenland", "7233.03", "Industrimekaniker", "Industrimekaniker", "Industrimekaniker", "YRKE_ORGNR",
+                "NLI  Grenland", "7233.03", "Industrimekaniker", Collections.singleton("Industri'mekaniker"), "Industrimekaniker", "YRKE_ORGNR",
                 "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         ArrayList<EsYrkeserfaring> yrkeserfaringsListe = new ArrayList<>();
@@ -2140,27 +2140,27 @@ public class EsCvObjectMother {
         utdanningsListe.add(utdanning2);
 
         EsYrkeserfaring yrkeserfaring1 = new EsYrkeserfaring(fraIsoDato("2000-01-01"), fraIsoDato("2000-01-10"),
-                "Stentransport, Kragerø", "8341.01", "", "", "maskinkjører og maskintransport",
+                "Stentransport, Kragerø", "8341.01", "", Set.of(), "maskinkjører og maskintransport",
                 "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring2 = new EsYrkeserfaring(fraIsoDato("2003-01-01"), fraIsoDato("2003-02-01"),
                 "AF-Pihl, Hammerfest", "8342.01", "Anleggsmaskinfører",
-                "Anleggsmaskinfører", "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Collections.singleton("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring3 = new EsYrkeserfaring(fraIsoDato("2003-04-01"), fraIsoDato("2003-05-01"),
                 "O.K. Hagalia, Slependen", "8342.01", "Anleggsmaskinfører",
-                "Anleggsmaskinfører", "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Collections.singleton("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring4 = new EsYrkeserfaring(fraIsoDato("2005-08-01"), fraIsoDato("2005-09-01"),
-                "Vard Group,avd.Brevik", "7233.03", "Industrimekaniker", "Industrimekaniker", "Industrimekaniker",
+                "Vard Group,avd.Brevik", "7233.03", "Industrimekaniker", Collections.singleton("Industrimekaniker"), "Industrimekaniker",
                 "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring5 = new EsYrkeserfaring(fraIsoDato("2016-06-01"), fraIsoDato("2016-07-01"),
-                "MTM anlegg", "8332.03", "Lastebil- og trailersjåfør", "Lastebil- og trailersjåfør", "Sjåfør kl. 2", "YRKE_ORGNR",
+                "MTM anlegg", "8332.03", "Lastebil- og trailersjåfør", Collections.singleton("Lastebil- og trailersjåfør"), "Sjåfør kl. 2", "YRKE_ORGNR",
                 "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring6 = new EsYrkeserfaring(fraIsoDato("2017-10-01"), fraIsoDato("2017-12-01"),
-                "NLI  Grenland", "7233.03", "Industrimekaniker", "Industrimekaniker", "Industrimekaniker", "YRKE_ORGNR",
+                "NLI  Grenland", "7233.03", "Industrimekaniker", Collections.singleton("Industrimekaniker"), "Industrimekaniker", "YRKE_ORGNR",
                 "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         ArrayList<EsYrkeserfaring> yrkeserfaringsListe = new ArrayList<>();
@@ -2329,27 +2329,27 @@ public class EsCvObjectMother {
         utdanningsListe.add(utdanning2);
 
         EsYrkeserfaring yrkeserfaring1 = new EsYrkeserfaring(fraIsoDato("2000-01-01"), fraIsoDato("2000-01-10"),
-                "Stentransport, Kragerø", "8341.01", "", "", "maskinkjører og maskintransport",
+                "Stentransport, Kragerø", "8341.01", "", Set.of(), "maskinkjører og maskintransport",
                 "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring2 = new EsYrkeserfaring(fraIsoDato("2003-01-01"), fraIsoDato("2013-02-01"),
                 "AF-Pihl, Hammerfest", "8342.01", "Anleggsmaskinfører",
-                "Anleggsmaskinfører", "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Set.of("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring3 = new EsYrkeserfaring(fraIsoDato("2003-04-01"), fraIsoDato("2003-05-01"),
                 "O.K. Hagalia, Slependen", "8342.01", "Anleggsmaskinfører",
-                "Anleggsmaskinfører", "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
+                Collections.singleton("Anleggsmaskinfører"), "maskinkjører og maskintransport", "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring4 = new EsYrkeserfaring(fraIsoDato("2005-08-01"), fraIsoDato("2005-09-01"),
-                "Vard Group,avd.Brevik", "7233.03", "Industrimekaniker", "Industrimekaniker", "Industrimekaniker",
+                "Vard Group,avd.Brevik", "7233.03", "Industrimekaniker", Collections.singleton("Industrimekaniker"), "Industrimekaniker",
                 "YRKE_ORGNR", "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring5 = new EsYrkeserfaring(fraIsoDato("2016-06-01"), fraIsoDato("2016-07-01"),
-                "MTM anlegg", "8332.03", "Lastebil- og trailersjåfør", "Lastebil- og trailersjåfør", "Sjåfør kl. 2", "YRKE_ORGNR",
+                "MTM anlegg", "8332.03", "Lastebil- og trailersjåfør", Set.of("Lastebil- og trailersjåfør"), "Sjåfør kl. 2", "YRKE_ORGNR",
                 "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         EsYrkeserfaring yrkeserfaring6 = new EsYrkeserfaring(fraIsoDato("2017-10-01"), fraIsoDato("2017-12-01"),
-                "NLI  Grenland", "7233.03", "Industrimekaniker", "Industrimekaniker", "Industrimekaniker", "YRKE_ORGNR",
+                "NLI  Grenland", "7233.03", "Industrimekaniker", Collections.singleton("Industrimekaniker"), "Industrimekaniker", "YRKE_ORGNR",
                 "YRKE_NACEKODE", false, Collections.emptyList(), "Oslo");
 
         ArrayList<EsYrkeserfaring> yrkeserfaringsListe = new ArrayList<>();
